# tutorialpress

./: README.md
curso-djngo/: manage.py  pyproject.toml
curso-djngo/tutorialpress/: settings.py  urls.py
curso-djngo/tutorialpress/core/: views.py
curso-djngo/tutorialpress/core/migrations/: 0001_initial.py
now/: pyproject.toml
now/tutorialpress/: settings.py  urls.py
now/tutorialpress/core/migrations/: 0001_initial.py  0002_categoria.py  0003_publicacao_categoria.py
now/tutorialpress/core/serializers/: __init__.py  publicacao.py
tests/integration/: test_categoria.py
