[tool.poetry]
name = "tutorialpress"
version = "0.1.0"
description = ""
authors = ["kaua"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
django = "^3.0.4"
djangorestframework = "^3.11.0"
drf-yasg = "^1.17.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.7.9"
isort = "^4.3.21"
pre-commit = "^2.1.1"
pytest = "^5.3.5"
pytest-cov = "^2.8.1"
pytest-django = "^3.8.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
